--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "emailjs-com": "^3.2.0",
     "next": "12.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.43.4"
+    "react-loading": "^2.0.3",
+    "sass": "^1.43.4",
+    "sweetalert2": "^11.1.9"
   },
   "devDependencies": {
     "eslint": "7.32.0",
