--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-loading": "^2.0.3",
+    "react-responsive-carousel": "^3.2.22",
     "sass": "^1.43.4",
     "sweetalert2": "^11.1.9"
   },
