--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "lint": "next lint"
   },
   "dependencies": {
     "emailjs-com": "^3.2.0",
     "moment": "^2.29.1",
-    "next": "12.0.2",
+    "next": "^12.3.4",
     "prismic-javascript": "^3.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
