--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prismic-javascript": "^3.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-facebook-pixel": "^1.0.4",
     "react-loading": "^2.0.3",
     "react-responsive-carousel": "^3.2.22",
     "sass": "^1.43.4",
